src/components/styles/fixedLayout.module.css
.header {
  height: 54px;
  border-bottom: 1px solid var(--light-gray);
  padding-bottom: var(--space-1);
  background-color: var(--white);

  top: 0;
  display: flex;
  justify-content: space-between;

  h1 {
    padding-top: var(--space-3);
    text-align: center;
    flex-grow: 1;
    font-size: var(--font-header);
    font-weight: normal;
  }

  button {
    border: none;
    background-color: var(--white);
    position: absolute;
    left: 5%;
    top: 50%;
    transform: translate(-50%, -50%);
  }
}

.navigation {
  height: 74px;
  background-color: var(--white);
  border-top: 1px solid var(--light-gray);
  bottom: 0;
  display: flex;
  justify-content: space-between;

  button {
    width: 100px;
    padding: var(--space-1);
    border-style: none;
    background-color: var(--white);
    cursor: pointer;
    color: var(--dark-gray);

    p {
      font-size: var(--font-4);
    }
  }

  .active {
    color: var(--main-blue);
  }
}

/* ✅ 중앙 정렬 + 스크롤 방지 구조 */
.header,
.navigation {
  position: fixed;
  left: 0;
  right: 0;
  margin: 0 auto;
  width: 100%;
  max-width: 640px;
  z-index: 1000;
}


@media (max-width: 430px) {
  .header,
  .navigation {
    width: 100%;
  }
}

@media (min-width: 431px) and (max-width: 640px) {
  .header,
  .navigation {
    width: 100%;
  }
}

